優化以及壓縮

--- a/index.html
+++ b/index.html
@@ -2,6 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="SCCJ">
+    <meta name="description" content="歡迎各位將用不到的東西傳承給學弟妹們！！">
+    <meta name="keywords" content="NCHU,中興大學,興大二手拍,興大APP,NCHU APP">
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="💰 NCHU 二手拍賣APP">
+    <meta name="twitter:description" content="歡迎各位將用不到的東西傳承給學弟妹們！！">
+    <meta name="twitter:site" content="@">
+    <meta name="twitter:creator" content="@">
+    <meta name="twitter:image" content="https://img.onl/rm6DMG">
+    <!-- Open Graph general (Facebook, Pinterest)-->
+    <meta property="og:title" content="💰 NCHU 二手拍賣APP">
+    <meta property="og:description" content="歡迎各位將用不到的東西傳承給學弟妹們！！">
+    <meta property="og:url" content="https://sclemon.github.io/nchu-secondHand/">
+    <meta property="og:site_name" content="sclemon.github.io">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://img.onl/rm6DMG">
     <link rel="apple-touch-icon" sizes="57x57" href="ico/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="ico/apple-icon-60x60.png">
     <link rel="apple-touch-icon" sizes="72x72" href="ico/apple-icon-72x72.png">
@@ -22,10 +39,9 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <title>中興大學二手拍賣場</title>
-    <script src="js/vue.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/vue.js" defer></script>
+    <script src="js/index.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
 </head>
 <style>
     [v-cloak]{
