--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
     <title>中興大學二手拍賣場</title>
+    <link rel="preconnect" href="https://ka-f.fontawesome.com">
     <script src="js/vue.js" defer></script>
     <script src="js/index.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
