--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
         display: none;
     }
 </style>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4739210406284661"
+     crossorigin="anonymous"></script>
 <body>
     <div class="app" id="app" v-cloak>
         <div class="alertMsgBlock" v-if="alertMsgBlock">
