微幅度調整

--- a/index.html
+++ b/index.html
@@ -180,6 +180,10 @@
                 <div class="shop forum-form">
                     <i @click="closeItem()" class="fa-solid fa-xmark mark2"></i>
                     <h1 class="forum-title">發布留言板</h1>
+                    <div class="forum-detail">
+                        <p class="forum-detail-p">留言者：{{loginData.user}}</p>
+                        <p class="forum-detail-p">現在時間：{{currentTime}}</p>
+                    </div>
                     <textarea class="forum-content" v-model="forumContent" placeholder="寫些想要說說的話吧！"></textarea>
                     <div class="shopbtn" @click="forumEnabled?uploadForum():alert('發布進行中，請稍待片刻','warn')">發布留言</div>
                 </div>
