--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                     <div class="mpLogo">NCHU</div>
                     <div class="search">
                         <i class="fa-solid fa-magnifying-glass"></i>
-                        <input type="text" v-model="keyword" :placeholder="placeholder">
+                        <input type="text" v-model="keyword" :placeholder="placeholder" id="search_input">
                     </div>
                     <div class="filter" @click="showFilter()"><i class="fa-solid fa-filter"></i></div>
                     <div class="filterBar" id="filterBar">
