--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     </div>
                 </div>
                 <h1 v-text="product_intro.title"></h1>
-                <p>${{product_intro.price}} <span class="intro_id">商品編號：{{product_intro.id}}</span></p>
+                <p>${{product_intro.price}} <span class="intro_id">商品編號：{{product_intro.id}} <i @click="copy(product_intro.id)" class="fa-regular fa-copy copy_icon" title="複製"></i></span></p>
                 <div class="ct-intro">
                     <p class="ct-intro-title">產品介紹</p>
                     <p class="ct-intro-main">{{product_intro.intro}}</p>
