--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <link rel="preconnect" href="https://ka-f.fontawesome.com">
     <script src="js/vue.js" defer></script>
     <script src="js/index.js" defer></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
 </head>
 <style>
     [v-cloak]{
