--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <script src="js/vue.js" defer></script>
     <script src="js/index.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+    <link rel="preload" href="img/bg2.jpg" as="image" />
+    <link rel="preload" href="img/form.jpeg" as="image" />
 </head>
 <style>
     [v-cloak]{
