--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
     <link rel="preload" href="img/bg2.jpg" as="image" />
     <link rel="preload" href="img/form.jpeg" as="image" />
+    <link rel="preload" href="img/pin2.png" as="image" />
+    <link rel="preload" href="img/down.webp" as="image" />
+    <link rel="preload" href="img/NCHU.png" as="image" />
 </head>
 <style>
     [v-cloak]{
