--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                         <div class="art-date">{{obj.date}}
                             <i v-if="loginData.user==obj.user" @click="toggleMenu(index)" class="fa-solid fa-ellipsis-vertical menu"></i>
                             <div v-if="loginData.user==obj.user" class="menuBox" :id="'menu'+index">
-                                <div class="menu-c" @click="deleteForum(obj.key)">刪除留言</div>
+                                <div class="menu-c" @click="deleteForum(obj.key,index)">刪除留言</div>
                             </div>
                         </div>
                         <div class="artist">
