meta tag change

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <!-- Open Graph general (Facebook, Pinterest)-->
     <meta property="og:title" content="💰 NCHU 二手拍賣APP">
     <meta property="og:description" content="歡迎各位將用不到的東西傳承給學弟妹們！！">
-    <meta property="og:url" content="https://sclemon.github.io/nchu-secondHand/">
-    <meta property="og:site_name" content="sclemon.github.io">
+    <meta property="og:url" content="https://tsaiii0109.github.io/nchu-secondHand/">
+    <meta property="og:site_name" content="tsaiii0109.github.io">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://img.onl/rm6DMG">
     <link rel="apple-touch-icon" sizes="57x57" href="ico/apple-icon-57x57.png">
