--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <meta name="theme-color" content="#ffffff">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/version2.css">
     <title>中興大學二手拍賣場</title>
     <link rel="preconnect" href="https://ka-f.fontawesome.com">
     <script src="js/vue.js" defer></script>
@@ -48,6 +49,8 @@
     <link rel="preload" href="img/pin2.png" as="image" />
     <link rel="preload" href="img/down.webp" as="image" />
     <link rel="preload" href="img/NCHU.png" as="image" />
+    <link rel="preload" href="img/load_ani.gif" as="image" />
+    <link rel="preconnect" href="https://drive.google.com">
 </head>
 <style>
     [v-cloak]{
@@ -164,7 +167,8 @@
                 </div>
                 <div class="item-intro-footer">
                     <div class="intro-total">合計：${{product_intro.price}}</div>
-                    <div class="item-intro-btn" @click="reserve(product_intro.title,product_intro.img1,product_intro.price,product_intro.intro,product_intro.mail,product_intro.key)"><i class="fa-solid fa-cart-shopping"></i> 預約商品</div>
+                    <div v-if="product_intro.mail!=loginData.user" class="item-intro-btn" @click="reserve(product_intro.title,product_intro.img1,product_intro.price,product_intro.intro,product_intro.mail,product_intro.key)"><i class="fa-solid fa-cart-shopping"></i> 預約商品</div>
+                    <div v-else class="item-intro-btn" @click="removeEnabled?removeItem(product_intro.key,product_intro.title,product_intro.price):alert('下架進行中，請稍待片刻','warn')"><i class="fa-solid fa-cart-shopping"></i>下架商品</div>
                 </div>
             </div>
             <div class="item-intro2" v-if="openIndex==2">
@@ -189,17 +193,6 @@
                     </div>
                     <div class="shopbtn" @click="uploadEnabled?addItem():alert('上架進行中，請稍待片刻','warn')">上架商品</div>
                 </div>
-            </div>
-            <div class="item-intro item-intro3" v-if="openIndex==3">
-                <i @click="closeItem()" class="fa-solid fa-xmark mark2"></i>
-                <h1 class="list-h1">下架商品列</h1>
-                <div class="list">
-                    <div class="li-c" v-for="obj in ownItem">
-                        <div class="li-title">{{obj.title}}</div>
-                        <div class="li-price">${{obj.price}}</div>
-                        <div class="li-key" @click="removeEnabled?removeItem(obj.key,obj.title,obj.price):alert('下架進行中，請稍待片刻','warn')">下架商品</div>
-                    </div>
-                </div>   
             </div>
             <div class="item-intro2 item-intro4" v-if="openIndex==4">
                 <div class="shop forum-form">
@@ -277,12 +270,145 @@
             <div class="write" v-if="mainPageIndex==1" @click="openWindow(4)">
                 <i class="fa-solid fa-pencil"></i>
             </div>
+            <div class="content content3" v-if="mainPageIndex==2">
+                <div class="Personlist">
+                    <div class="pl-head">
+                        <div class="pl-head-img" @click="uploadUserImg()">
+                            <img :src="userInfo.img" alt="">
+                            <div class="uploadUserImg">上傳頭像
+                                 <input type='file' accept="image/jpg,image/png,image/jpeg" class="file" id="headImg" v-on:change="uploadUserImgStart()">
+                            </div>
+                        </div>
+                        <div class="pl-head-name" v-text="userInfo.user"></div>
+                    </div>
+                    <div class="pl-c" @click="main(3,'修改完畢後請按確認鍵！')">基本資料</div>
+                    <div class="pl-c" @click="main(4,'關鍵字搜尋商品')">個人賣場</div>
+                    <div class="pl-c" @click="main(5,'搜尋待出貨訂單')">賣家訂單</div>
+                    <div class="pl-c" @click="main(6,'搜尋商品預約訂單')">預約管理</div>
+                    <div class="pl-c" @click="clearLogin()">登出</div>
+                </div>
+            </div>
+            <div class="content content3" v-if="mainPageIndex==3">
+                <div class="pl-head">
+                    <div class="pl-head-img" @click="uploadUserImg()">
+                        <img :src="userInfo.img" alt="">
+                        <div class="uploadUserImg">上傳頭像
+                            <input type='file' accept="image/jpg,image/png,image/jpeg" class="file" id="headImg" v-on:change="uploadUserImgStart()">
+                       </div>
+                    </div>
+                    <div class="pl-head-name" v-text="userInfo.user"></div>
+                </div>
+                <div class="userInfoPage">
+                   <div class="userInfoPage-c">
+                        <div>使用者帳號：</div>
+                        <input type="text" disabled :value="userInfo.user"><br>
+                   </div> 
+                   <div class="userInfoPage-c">
+                        <div>使用者密碼：</div>
+                        <input type="text" v-model="userInfo.password" :disabled="reviseNotEnabled"><br>
+                   </div>
+                   <div class="userInfoPage-c">
+                        <div>使用者驗證碼：</div>
+                        <input type="text" v-model="userInfo.key" :disabled="reviseNotEnabled"><br>
+                   </div>
+                    <div class="userInfoRevise" @click="reviseUserInfo()">保存修改</div>
+                </div>
+            </div>
+            <div class="content content3" v-if="mainPageIndex==4">
+                <div class="pl-head">
+                    <div class="pl-head-img" @click="uploadUserImg()">
+                        <img :src="userInfo.img" alt="">
+                        <div class="uploadUserImg">上傳頭像
+                            <input type='file' accept="image/jpg,image/png,image/jpeg" class="file" id="headImg" v-on:change="uploadUserImgStart()">
+                       </div>
+                    </div>
+                    <div class="pl-head-name" v-text="userInfo.user"></div>
+                </div>
+                <i id='fr' class="fa-solid fa-arrows-rotate" @click="spinRefresh()"></i>
+                <div class="content-control ct-in-index4">
+                    <div class="content-box" 
+                    v-if="(obj.title.includes(keyword) || (obj.id).toString().includes(keyword) || obj.tag.includes(keyword)) && (filterName=='all' || filterName==obj.tag) && obj.mail==loginData.user" 
+                    v-for="obj in product" 
+                    @click="openItem(obj.id,obj.title,obj.price,obj.img2,obj.intro,obj.mail,obj.key,obj.img1,'seller')">
+                        <img :src="obj.img1" alt="">
+                        <div class="pin"></div>
+                        <h1 v-text="obj.title"></h1>
+                        <p>${{obj.price}}</p>
+                        <div class="re">預約數：{{obj.per}}</div>
+                    </div>
+                </div>
+            </div>
+            <div class="content content3" v-if="mainPageIndex==5">
+                <div class="pl-head">
+                    <div class="pl-head-img" @click="uploadUserImg()">
+                        <img :src="userInfo.img" alt="">
+                        <div class="uploadUserImg">上傳頭像
+                            <input type='file' accept="image/jpg,image/png,image/jpeg" class="file" id="headImg" v-on:change="uploadUserImgStart()">
+                       </div>
+                    </div>
+                    <div class="pl-head-name" v-text="userInfo.user"></div>
+                </div>
+                <div class="sellerReserveList">
+                  <div class="srlist" v-if="obj.content.includes(keyword) || obj.buyer.includes(keyword) || keyword==''" v-for="obj,index in sellerReserve" :id="'srlist'+index" @click="toggleSrList('srlist'+index,index)">
+                    <div class="sr-title">出貨單 {{index+1}}：{{obj.content}}<i class="fa-solid fa-chevron-up oc"></i></div>
+                    <div class="sr-detail">
+                        <div class="sr-dc sr-ex">買家信箱：{{obj.buyer}}</div>
+                        <div class="sr-dc">訂單成立：<br>{{new Date(obj.date).toLocaleDateString()}}</div>
+                        <div class="sr-dc">商品名稱：<br>{{obj.content}}</div>
+                        <div class="sr-dc">訂單價格：<br>$ {{obj.price}}</div>
+                        <div class="sr-dc">商品識別：<br>{{obj.key}}</div>
+                        <div class="sr-dc sr-ex">賣家信箱：{{obj.seller}}</div>
+                        <div class="sr-btn" @click="removeEnabled?removeItem(obj.key,obj.content,obj.price):alert('下架進行中，請稍待片刻','warn')">下架商品</div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="content content3" v-if="mainPageIndex==6">
+                <div class="pl-head">
+                    <div class="pl-head-img" @click="uploadUserImg()">
+                        <img :src="userInfo.img" alt="">
+                        <div class="uploadUserImg">上傳頭像
+                            <input type='file' accept="image/jpg,image/png,image/jpeg" class="file" id="headImg" v-on:change="uploadUserImgStart()">
+                       </div>
+                    </div>
+                    <div class="pl-head-name" v-text="userInfo.user"></div>
+                </div>
+                <div class="sellerReserveList">
+                  <div class="srlist" v-if="obj.content.includes(keyword) || obj.seller.includes(keyword) || keyword==''" v-for="obj,index in buyerReserve" :id="'srlist'+index" @click="toggleSrList('srlist'+index,index)">
+                    <div class="sr-title">預約單 {{index+1}}：{{obj.content}}<i class="fa-solid fa-chevron-up oc"></i></div>
+                    <div class="sr-detail">
+                        <div class="sr-dc sr-ex">買家信箱：{{obj.buyer}}</div>
+                        <div class="sr-dc">訂單成立：<br>{{new Date(obj.date).toLocaleDateString()}}</div>
+                        <div class="sr-dc">商品名稱：<br>{{obj.content}}</div>
+                        <div class="sr-dc">訂單價格：<br>$ {{obj.price}}</div>
+                        <div class="sr-dc">商品識別：<br>{{obj.key}}</div>
+                        <div class="sr-dc sr-ex">賣家信箱：{{obj.seller}}</div>
+                        <div class="sr-btn" @click="drEnabled?deleteReserve(obj.key):alert('取消預約中，請稍待片刻','warn')">取消預約</div>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <div class="content" v-if="mainPageIndex==7">
+                <div class="forum-spin" id="forum-spin"><i class="fa-solid fa-spinner fa-spin"></i></div>
+                <div class="content-control content-control2" @scroll="systemRefresh()" id="msgScroll">
+                    <div class="content-box content-box2" 
+                    v-for="obj,index in systemInfo" 
+                    v-if="obj.content.includes(keyword) || keyword==''">
+                        <div class="art-date">{{obj.date}}</div>
+                        <div class="artist">
+                            <img src="img/system.png" alt="">
+                            <p>系統通知</p>
+                        </div>
+                        <div class="artist-c" v-text="obj.content"></div>
+                    </div>
+                </div>
+            </div>
             <div class="footer">
-                <div class="footer-content"  @click="main()">
+                <div class="footer-content"  @click="main(0,'輸入關鍵字查詢商品')">
                     <i class="fa-solid fa-house"></i>
                     <span>主頁</span>
                 </div>
-                <div class="footer-content" @click="openForum()">
+                <div class="footer-content" @click="main(1,'關鍵字查詢作者或留言')">
                     <i class="fa-solid fa-message"></i>
                     <span>論壇</span>
                 </div>
@@ -290,13 +416,13 @@
                     <i class="fa-solid fa-cloud-arrow-up"></i>
                     <span>上架</span>
                 </div>
-                <div class="footer-content" @click='openWindow(3)'>
-                    <i class="fa-solid fa-trash"></i>
-                    <span>下架</span>
+                <div class="footer-content" @click="main(7,'系統通知信查詢')">
+                    <i class="fa-solid fa-bell"></i>
+                    <span>通知</span>
                 </div>
-                <div class="footer-content" @click="clearLogin()">
-                    <i class="fa-solid fa-right-from-bracket"></i>
-                    <span>登出</span>
+                <div class="footer-content" @click="main(2,'親愛的使用者您好！')">
+                    <i class="fa-solid fa-user"></i>
+                    <span>個人</span>
                 </div>
             </div>
         </div>
