--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
                     <div class="pl-head-name" v-text="userInfo.user"></div>
                 </div>
                 <div class="sellerReserveList">
-                  <div class="srlist" v-if="obj.content.includes(keyword) || obj.buyer.includes(keyword) || keyword==''" v-for="obj,index in sellerReserve" :id="'srlist'+index" @click="toggleSrList('srlist'+index,index)">
+                  <div class="srlist" v-if="obj.content.includes(keyword) || obj.buyer.includes(keyword) || keyword==''" v-for="obj,index in sellerReserve" :id="'srlist'+index" @click="toggleSrList(index)">
                     <div class="sr-title">出貨單 {{index+1}}：{{obj.content}}<i class="fa-solid fa-chevron-up oc"></i></div>
                     <div class="sr-detail">
                         <div class="sr-dc sr-ex">買家信箱：{{obj.buyer}}</div>
@@ -374,7 +374,7 @@
                     <div class="pl-head-name" v-text="userInfo.user"></div>
                 </div>
                 <div class="sellerReserveList">
-                  <div class="srlist" v-if="obj.content.includes(keyword) || obj.seller.includes(keyword) || keyword==''" v-for="obj,index in buyerReserve" :id="'srlist'+index" @click="toggleSrList('srlist'+index,index)">
+                    <div class="srlist" v-if="obj.content.includes(keyword) || obj.seller.includes(keyword) || keyword==''" v-for="obj,index in buyerReserve" :id="'srlist'+index" @click="toggleSrList(index)">
                     <div class="sr-title">預約單 {{index+1}}：{{obj.content}}<i class="fa-solid fa-chevron-up oc"></i></div>
                     <div class="sr-detail">
                         <div class="sr-dc sr-ex">買家信箱：{{obj.buyer}}</div>
