--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
                 </div>
                 <div class="item-intro-footer">
                     <div class="intro-total">合計：${{product_intro.price}}</div>
-                    <div v-if="product_intro.mail==loginData.user" class="item-intro-btn" @click="removeEnabled?removeItem(product_intro.key,product_intro.title,product_intro.price):alert('下架進行中，請稍待片刻','warn')"><i class="fa-solid fa-trash"></i> 下架商品</div>
+                    <div v-if="product_intro.flag=='seller'" class="item-intro-btn item-intro-btn-seller" @click="openWindow(3,product_intro)"><i class="fa-solid fa-pen"></i> 修改</div>
+                    <div v-if="product_intro.flag=='seller'" class="item-intro-btn item-intro-btn-seller2" @click="removeEnabled?removeItem(product_intro.key,product_intro.title,product_intro.price):alert('下架進行中，請稍待片刻','warn')"><i class="fa-solid fa-trash"></i> 下架</div>
+                    <div v-else-if="product_intro.mail==loginData.user" class="item-intro-btn" @click="removeEnabled?removeItem(product_intro.key,product_intro.title,product_intro.price):alert('下架進行中，請稍待片刻','warn')"><i class="fa-solid fa-trash"></i> 下架商品</div>
                     <div v-else-if="buyerReserve.find(el=> el.buyer == this.loginData.user && el.key == product_intro.key)" class="item-intro-btn" @click="deleteReserve(product_intro.key)"><i class="fa-solid fa-seedling"></i> 取消預約</div>
                     <div v-else class="item-intro-btn" @click="reserve(product_intro.title,product_intro.img1,product_intro.price,product_intro.intro,product_intro.mail,product_intro.key)"><i class="fa-solid fa-cart-shopping"></i> 預約商品</div>           
                 </div>
@@ -195,7 +197,29 @@
                             <option value="其他">其他</option>
                         </select>
                     </div>
-                    <div class="shopbtn" @click="uploadEnabled?addItem():alert('上架進行中，請稍待片刻','warn')">上架商品</div>
+                    <div class="shopbtn" @click="uploadEnabled?addItem():alert('上架進行中，請稍待片刻','warn')"><i class="fa-solid fa-rocket"></i> 上架商品</div>
+                </div>
+            </div>
+            <div class="item-intro2" v-if="openIndex==3">
+                <div class="shop">
+                    <div class="reviseTitle">修改表單</div>
+                    <i @click="closeItem()" class="fa-solid fa-xmark mark2"></i>
+                    <div class="shop-title"><div class="stt">商品標題：</div><br><input type="text" v-model="reviseProduct.title"></div>
+                    <div class="shop-title"><div class="stt">商品價格：</div><br><input type="text" v-model="reviseProduct.price"></div>
+                    <div class="shop-title shopTitle2"><div class="stt">商品介紹：</div><br>
+                        <textarea v-model="reviseProduct.intro" class="reviseIntro"></textarea>
+                    </div>
+                    <div class="shop-title">商品標籤:
+                        <select name="" id="" v-model="reviseProduct.tag" class="reviseTag">
+                            <option value="書籍">書籍</option>
+                            <option value="衣物">衣物</option>
+                            <option value="宿舍用品">宿舍用品</option>
+                            <option value="電子用品">電子用品</option>
+                            <option value="零食">零食</option>
+                            <option value="其他">其他</option>
+                        </select>
+                    </div>
+                    <div class="shopbtn" @click="reviseProductEnabled?reviseProductStart():alert('修改進行中，請稍待片刻','warn')"><i class="fa-solid fa-pen"></i> 保存修改</div>
                 </div>
             </div>
             <div class="item-intro2 item-intro4" v-if="openIndex==4">
@@ -207,7 +231,7 @@
                         <p class="forum-detail-p">現在時間：{{currentTime}}</p>
                     </div>
                     <textarea class="forum-content" v-model="forumContent" placeholder="寫些想要說說的話吧！"></textarea>
-                    <div class="shopbtn" @click="forumEnabled?uploadForum():alert('發布進行中，請稍待片刻','warn')">發布留言</div>
+                    <div class="shopbtn" @click="forumEnabled?uploadForum():alert('發布進行中，請稍待片刻','warn')"><i class="fa-solid fa-pen"></i> 發布留言</div>
                 </div>
             </div>
             <div class="header">
@@ -242,7 +266,7 @@
                     <div class="content-box" 
                     v-if="(obj.title.includes(keyword) || (obj.id).toString().includes(keyword) || obj.tag.includes(keyword)) && (filterName=='all' || filterName==obj.tag)" 
                     v-for="obj in product" 
-                    @click="openItem(obj.id,obj.title,obj.price,obj.img2,obj.intro,obj.mail,obj.key,obj.img1)">
+                    @click="openItem(obj.id,obj.title,obj.price,obj.img2,obj.intro,obj.mail,obj.key,obj.img1,'',obj.tag)">
                         <img :src="obj.img1" alt="">
                         <div class="pin"></div>
                         <h1 v-text="obj.title"></h1>
@@ -336,7 +360,7 @@
                     <div class="content-box" 
                     v-if="(obj.title.includes(keyword) || (obj.id).toString().includes(keyword) || obj.tag.includes(keyword)) && (filterName=='all' || filterName==obj.tag) && obj.mail==loginData.user" 
                     v-for="obj in product" 
-                    @click="openItem(obj.id,obj.title,obj.price,obj.img2,obj.intro,obj.mail,obj.key,obj.img1,'seller')">
+                    @click="openItem(obj.id,obj.title,obj.price,obj.img2,obj.intro,obj.mail,obj.key,obj.img1,'seller',obj.tag)">
                         <img :src="obj.img1" alt="">
                         <div class="pin"></div>
                         <h1 v-text="obj.title"></h1>
